Fixed wrong color for predicate names in styles for dictionary

--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ body {
   min-height: 48px;
 }
 .predicateName {
-  color: 999;
+  color: #999;
   font-weight: bold;
   padding-left: 16px;
 }
